ubuntu-core-launcher (1.0.2) UNRELEASED; urgency=low

  [ John Lenton ]
  * lp:~chipaca/ubuntu-core-launcher/unshare:
    - Set up a private mount namespace for /tmp.
  * lp:~chipaca/ubuntu-core-launcher/mktmpdir:
    - Make a best-effort attempt at creating the old TMPDIR.

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 22 May 2015 12:37:50 +0200

ubuntu-core-launcher (1.0.1) vivid; urgency=low

  * fix typo in udev rule
  * add COPYING/copyright headers
  * fix incorrect Vcs-Bzr link

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 23 Apr 2015 16:08:26 +0200

ubuntu-core-launcher (1.0) vivid; urgency=low

  * 15.04 upload to the archive

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 23 Apr 2015 11:05:01 +0200

ubuntu-core-launcher (0.2.15) vivid; urgency=low

  * src/main.c:
    - update json.additional needle to match update in
      lp:~mvo/snappy/additional-json-additional-addition/+merge/257163

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 22 Apr 2015 21:28:08 +0200

ubuntu-core-launcher (0.2.14) vivid; urgency=low

  * merged  lp:~tyhicks/ubuntu-core-launcher/close-fd
    that fixes a FD leak, many thanks Tyler!

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 22 Apr 2015 18:40:13 +0200

ubuntu-core-launcher (0.2.13) vivid; urgency=low

  * only setup the device cgroup if the snap has unrestricted access
    to /dev from apparmor via a appname specific .json.additional file

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 22 Apr 2015 17:25:06 +0200

ubuntu-core-launcher (0.2.12) vivid; urgency=low

  * only setup device cgroup if we actually need it, i.e. if we
    actually have a device that we can use

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 22 Apr 2015 14:58:58 +0200

ubuntu-core-launcher (0.2.11) vivid; urgency=low

  * merge lp:~tyhicks/ubuntu-core-launcher/fixes

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 22 Apr 2015 11:14:02 +0200

ubuntu-core-launcher (0.2.10) vivid; urgency=low
