@@ -6,6 +6,9 @@ ubuntu-core-launcher (1.0.2) UNRELEASED; urgency=low
   * lp:~chipaca/ubuntu-core-launcher/mktmpdir:
     - Make a best-effort attempt at creating the old TMPDIR.
 
+  [ Sergio Schvezov ]
+  * Allow executing from /frameworks.
+
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 22 May 2015 12:37:50 +0200
 
 ubuntu-core-launcher (1.0.1) vivid; urgency=low
